My name has been added

--- a/Basant.html
+++ b/Basant.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My New File</title>
+	<title>My New File has my name which is Basant Gera</title>
 </head>
 <body>
 
