Modified the name in HTML file

--- a/David.html
+++ b/David.html
@@ -6,6 +6,6 @@
 	<title></title>
 </head>
 <body>
-<h1>Hello David how are you !!!!!</h1>
+<h1>Hello Tamara how are you !!!!!</h1>
 </body>
 </html>
